Version 2.0-dev
- removed Runner
- simplified output
- automated tests runner exits with 0/1 depending on whetever all tests passed
- deprecated Environment::testStats()
- added option to mark test method as supposed to fail

Version 1.0
- added dependency on tracy/tracy
- BC break: Environment::testStats() takes 2 paramaters now, second one is name is Tracy's timer
- added integration for nette/di
- Assert::tryAssertion() now supports custom messages for succes and failure
- improved success and failure messages for some built-in assertions
- code refactoring
- added new assertion notCount
- all items of array are now evaluated in TestCase::checkSkip()
- added option to skip test if an extension is not loaded
- deprecated Runner
- added methods setUp and tearDown to TestCase which are called before/after each test method
- version of My Tester and PHP is shown at start now
- BC break: TestCase::getJobs() now return array of Job
- first parameter of Runner::addJob() can be instance of Job now
- added methods startUp and shutDown to TestCase which are called at start/end of the suit
- automated tests runner now sets up the environment himself
- showed total run time at the end of script

Version 0.9.4c
- fixed assertion same

Version 0.9.4b
- raised minimal version of PHP to 5.6
- corrected a typo

Version 0.9.4a
- raised minimal version of PHP to 5.5
- require version 2.4 of packages nette/reflection and nette/robot-loader

Version 0.9.4
- allowed conditional skipping of tests (in TestCase)
- small code refactoring
- print number of finished and skipped jobs for TestCase

Version 0.9.3
- test suits can have custom names
- possible BC break: made Environment::$taskCount protected (use Environment::getCounter() to get its value)
- possible BC break: made Environment::$output protected (use Environment::getOutput() to get its value)
- clarified error message when trying to set invalid output mode