@@ -4,6 +4,9 @@ Version 2.0-dev
 - automated tests runner exits with 0/1 depending on whetever all tests passed
 - deprecated Environment::testStats()
 - added option to mark test method as supposed to fail
+- removed option to save the output to file(s)
+- removed method Environment::getOutput()
+- removed second parameter of Environment::printLine()
 
 Version 1.0
 - added dependency on tracy/tracy
